path github page fix test

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     name="description"
     content="Magical Mirai 2023 programming contest entry"
   />
-  <link rel="stylesheet" href="/styles/index.css" />
+  <link rel="stylesheet" href="/MM-2023-Mutation/styles/index.css" />
   <link rel="stylesheet" href="/styles/lyrics.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
