github page path test

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="/images/favicon.png" />
+  <link rel="icon" href="./images/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <title>Hyper Mutation</title>
@@ -9,8 +9,8 @@
     name="description"
     content="Magical Mirai 2023 programming contest entry"
   />
-  <link rel="stylesheet" href="/MM-2023-Mutation/styles/index.css" />
-  <link rel="stylesheet" href="/styles/lyrics.css" />
+  <link rel="stylesheet" href="./styles/index.css" />
+  <link rel="stylesheet" href="./styles/lyrics.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=DotGothic16&family=Potta+One&family=Rampart+One&family=RocknRoll+One&family=Train+One&display=swap" rel="stylesheet">
