--- a/index.html
+++ b/index.html
@@ -133,5 +133,5 @@
   </main>
 </body>
 <!-- Must be after html so it can access the media div -->
-<script type="module" src="/scripts/Lyrics.js"></script>
+<script type="module" src="./scripts/Lyrics.js"></script>
 
