import map update

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
       "imports": {
         "three": "https://unpkg.com/three@v0.152.2/build/three.module.js",
         "three/addons/": "https://unpkg.com/three@v0.152.2/examples/jsm/",
-        "@tweenjs/tween.js": "https://unpkg.com/@tweenjs/tween.js@^20.0.0/dist/tween.umd.js"
+        "@tweenjs/tween.js": "https://unpkg.com/@tweenjs/tween.js@^20.0.0/dist/tween.umd.js",
+        "textalive-app-api": "https://unpkg.com/textalive-app-api/dist/index.js"
       }
     }
   </script>
