converted textalive import to script tag

--- a/index.html
+++ b/index.html
@@ -22,9 +22,13 @@
         "three": "https://unpkg.com/three@v0.152.2/build/three.module.js",
         "three/addons/": "https://unpkg.com/three@v0.152.2/examples/jsm/",
         "@tweenjs/tween.js": "https://unpkg.com/@tweenjs/tween.js@^20.0.0/dist/tween.umd.js",
-        "textalive-app-api": "https://unpkg.com/textalive-app-api/dist/index.js"
       }
     }
+  </script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="https://unpkg.com/textalive-app-api/dist/index.js"></script>
+  <script>
+    const { Player } = TextAliveApp;
   </script>
   <script type = "module" src="./scripts/App.js"></script>
 </head>
