postprocessing import to unpkg

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         "three": "https://unpkg.com/three@v0.152.2/build/three.module.js",
         "three/addons/": "https://unpkg.com/three@v0.152.2/examples/jsm/",
         "@tweenjs/tween.js": "https://unpkg.com/@tweenjs/tween.js@^20.0.0/dist/tween.umd.js",
+        "postprocessing": "https://unpkg.com/browse/postprocessing@6.33.0/build/index.js"
       }
     }
   </script>
