--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     {
       "imports": {
         "three": "https://unpkg.com/three@v0.152.2/build/three.module.js",
-        "three/addons/": "https://unpkg.com/three@v0.152.2/examples/jsm/",
+        "three/addons/": "https://unpkg.com/three@v0.152.2/examples/jsm/"
       }
     }
   </script>
